<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home1"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_history1"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/History" />
        <item
            android:id="@+id/nav_profile1"
            android:icon="@drawable/ic_baseline_person_outline_24"
            android:title="@string/Profile" />
        <item
            android:id="@+id/nav_setting1"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/Setting" />

    </group>

</menu>